syntax = "proto2";
package cql;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message UintProp {
	optional string name  = 1 [(gogoproto.nullable) = false];
	optional bool isFloat = 2 [(gogoproto.nullable) = false];
	optional int32 valLen   = 3 [(gogoproto.nullable) = false];
	optional uint64 val   = 4 [(gogoproto.nullable) = false];
}

message EnumProp {
	optional string name = 1 [(gogoproto.nullable) = false];
	optional uint64 val     = 2 [(gogoproto.nullable) = false];
}

message StrProp {
	optional string name = 1 [(gogoproto.nullable) = false];
	optional string val     = 2 [(gogoproto.nullable) = false];
}

message Document {
    optional uint64 docID = 1 [(gogoproto.nullable) = false];
    repeated UintProp uintProps = 2;
    repeated EnumProp enumProps = 3;
    repeated StrProp strProps = 4;
}

message DocumentWithIdx {
    optional Document doc = 1 [(gogoproto.nullable) = false];
    optional string index = 2 [(gogoproto.nullable) = false];
}

message DocumentDel {
    optional string index = 1 [(gogoproto.nullable) = false];
    optional uint64 docID = 2 [(gogoproto.nullable) = false];
}
